# BexoStudio

./: .gitignore  AGENTS.md  LICENSE  README.md  codex_payload_20260316_050229_54016.json  components.json  findings.md  index.html  package-lock.json  package.json  progress.md  task_plan.md  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: phase6c_verify.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: codex.rs  ide.rs  mod.rs  process.rs  terminal.rs
src-tauri/src/app/: mod.rs  tray.rs  window.rs
src-tauri/src/commands/: bootstrap.rs  codex_profile.rs  launch_task.rs  mod.rs  native_interaction.rs  preferences.rs  resource_browser.rs  restore.rs  screenshot.rs  snapshot.rs  workspace.rs
src-tauri/src/domain/: adapter.rs  codex_profile.rs  hotkey.rs  launch_task.rs  mod.rs  native_interaction.rs  preferences.rs  project.rs  resource_browser.rs  restore_event.rs  restore_run.rs  restore_run_task.rs  screenshot.rs  snapshot.rs  validation.rs  workspace.rs
src-tauri/src/error/: mod.rs
src-tauri/src/logging/: mod.rs  restore_log.rs
src-tauri/src/persistence/: codex_profile_repo.rs  launch_task_repo.rs  mod.rs  project_repo.rs  restore_run_repo.rs  schema.rs  snapshot_repo.rs  sqlite.rs  workspace_repo.rs
src-tauri/src/services/: desktop_duplication_capture.rs  hotkey_service.rs  mod.rs  native_interaction_backend_windows.rs  native_interaction_service.rs  native_preview_backend_windows.rs  native_preview_service.rs  planner_service.rs  preferences_service.rs  profile_service.rs  resource_browser_service.rs  restore_service.rs  screenshot_service.rs  wgc_capture.rs  windows_hook_hotkey.rs  workspace_service.rs
src-tauri/target-alt/: .rustc_info.json
src/app/: app.tsx  error-boundary.tsx  providers.tsx
src/components/: empty-state.tsx  error-alert.tsx  status-badge.tsx
src/components/shell/: app-logo.tsx  page-header.tsx  primary-rail.tsx  section-sidebar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  scroll-area.tsx  select.tsx  separator.tsx  textarea.tsx
src/features/resource-browser/: resource-browser-pane.tsx  resource-browser-state.ts  resource-browser-utils.ts
src/layouts/: app-shell.tsx
src/lib/: app-preferences.ts  clipboard.ts  command-client.ts  desktop-notification.ts  navigation.ts  reorder-motion.ts  restore-runtime.ts  tauri-runtime.ts  terminal-command.ts  use-pointer-reorder.ts
src/pages/: frozen-module-page.tsx  home-page.tsx  logs-page.tsx  profiles-page.tsx  screenshot-overlay-page.tsx  settings-page.tsx  snapshots-page.tsx  workspaces-page.tsx
src/queries/: preferences.ts  profiles.ts  restore-runs.ts  snapshots.ts  workspaces.ts
src/routes/: app-router.tsx
src/stores/: shell-store.ts
src/styles/: globals.css
src/types/: backend.ts  navigation.ts
